--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ RoxygenNote: 7.2.1
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5)
-Imports: stats, ggplot2, ggcorrplot
+Imports: stats, ggplot2, ggcorrplot, ggforce, vegan
 Suggests: 
     knitr,
     rmarkdown
