--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,7 +3,8 @@ pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   Introduction: Introduction.html
-last_built: 2023-06-21T09:07Z
+  SampleGroup: SampleGroup.html
+last_built: 2023-06-21T13:26Z
 urls:
   reference: https://github.com/benben-miao/reference
   article: https://github.com/benben-miao/articles
