--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(box_plot)
 export(corr_heatmap)
 export(pca_plot)
 export(quantile_plot)
+export(venn_plot)
 export(violin_plot)
 import(ggcorrplot)
 import(ggforce)
@@ -13,3 +14,4 @@ import(ggsci)
 import(stats)
 import(utils)
 import(vegan)
+import(venn)
