--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TOmicsVis
 Title: Transcript Omics Visualization
-Version: 1.0.4
+Version: 1.0.5
 Authors@R: c(
     person("Benben", "Miao", , "benben.miao@outlook.com", c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7307-1331"))
@@ -14,7 +14,7 @@ RoxygenNote: 7.2.1
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.5)
-Imports: stats, utils, ggplot2, ggsci, ggpubr, ggcorrplot, ggforce, vegan, venn
+Imports: stats, utils, grid, graphics, grDevices, ggplot2, ggsci, ggpubr, ggcorrplot, ggforce, vegan, venn, circlize, randomcoloR, ComplexHeatmap
 Suggests: 
     knitr,
     rmarkdown
