New function volcano_plot and ma_plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,14 @@ export(box_plot)
 export(chord_plot)
 export(circos_heatmap)
 export(corr_heatmap)
+export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
 export(venn_plot)
 export(violin_plot)
+export(volcano_plot)
 import(ComplexHeatmap)
+import(EnhancedVolcano)
 import(circlize)
 import(ggcorrplot)
 import(ggforce)
