--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,14 @@ export(corr_heatmap)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
+export(table_split)
+export(trend_plot)
 export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
 import(ComplexHeatmap)
 import(EnhancedVolcano)
+import(GGally)
 import(circlize)
 import(ggcorrplot)
 import(ggforce)
@@ -22,6 +25,7 @@ import(grDevices)
 import(graphics)
 import(grid)
 import(randomcoloR)
+import(reshape2)
 import(stats)
 import(utils)
 import(vegan)
