New function survival_plot and tsne_plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,14 +7,17 @@ export(corr_heatmap)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
+export(survival_plot)
 export(table_split)
 export(trend_plot)
+export(tsne_plot)
 export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
 import(ComplexHeatmap)
 import(EnhancedVolcano)
 import(GGally)
+import(Rtsne)
 import(circlize)
 import(ggcorrplot)
 import(ggforce)
@@ -27,6 +30,8 @@ import(grid)
 import(randomcoloR)
 import(reshape2)
 import(stats)
+import(survival)
+import(survminer)
 import(utils)
 import(vegan)
 import(venn)
