New function table_merge, table_filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
 export(survival_plot)
+export(table_filter)
+export(table_merge)
 export(table_split)
 export(trend_plot)
 export(tsne_plot)
@@ -35,3 +37,4 @@ import(survminer)
 import(utils)
 import(vegan)
 import(venn)
+importFrom(dplyr,filter)
