New functions table_cross, go_enrich

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export(box_plot)
 export(chord_plot)
 export(circos_heatmap)
 export(corr_heatmap)
+export(go_enrich)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
 export(survival_plot)
+export(table_cross)
 export(table_filter)
 export(table_merge)
 export(table_split)
@@ -21,6 +23,9 @@ import(EnhancedVolcano)
 import(GGally)
 import(Rtsne)
 import(circlize)
+import(clusterProfiler)
+import(dplyr)
+import(enrichplot)
 import(ggcorrplot)
 import(ggforce)
 import(ggplot2)
@@ -34,6 +39,7 @@ import(reshape2)
 import(stats)
 import(survival)
 import(survminer)
+import(tidyr)
 import(utils)
 import(vegan)
 import(venn)
