New functions go_enrich_stat, go_enrich_bar

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(chord_plot)
 export(circos_heatmap)
 export(corr_heatmap)
 export(go_enrich)
+export(go_enrich_bar)
+export(go_enrich_stat)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
