--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,10 @@ export(circos_heatmap)
 export(corr_heatmap)
 export(go_enrich)
 export(go_enrich_bar)
+export(go_enrich_dot)
+export(go_enrich_net)
 export(go_enrich_stat)
+export(go_enrich_tree)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
@@ -30,6 +33,7 @@ import(dplyr)
 import(enrichplot)
 import(ggcorrplot)
 import(ggforce)
+import(ggnewscale)
 import(ggplot2)
 import(ggpubr)
 import(ggsci)
