--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,11 @@ export(go_enrich_dot)
 export(go_enrich_net)
 export(go_enrich_stat)
 export(go_enrich_tree)
+export(kegg_enrich)
+export(kegg_enrich_bar)
+export(kegg_enrich_dot)
+export(kegg_enrich_net)
+export(kegg_enrich_tree)
 export(ma_plot)
 export(pca_plot)
 export(quantile_plot)
