New functions network_plot, wgcna_pipeline

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(kegg_enrich_dot)
 export(kegg_enrich_net)
 export(kegg_enrich_tree)
 export(ma_plot)
+export(network_plot)
 export(pca_plot)
 export(quantile_plot)
 export(survival_plot)
@@ -28,14 +29,17 @@ export(tsne_plot)
 export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
+export(wgcna_pipeline)
 import(ComplexHeatmap)
 import(EnhancedVolcano)
 import(GGally)
 import(Rtsne)
+import(WGCNA)
 import(circlize)
 import(clusterProfiler)
 import(dplyr)
 import(enrichplot)
+import(factoextra)
 import(ggcorrplot)
 import(ggforce)
 import(ggnewscale)
@@ -45,13 +49,17 @@ import(ggsci)
 import(grDevices)
 import(graphics)
 import(grid)
+import(igraph)
 import(randomcoloR)
 import(reshape2)
 import(stats)
+import(stringr)
 import(survival)
 import(survminer)
 import(tidyr)
 import(utils)
 import(vegan)
 import(venn)
+importFrom(clusterProfiler,enricher)
 importFrom(dplyr,filter)
+importFrom(grDevices,colorRamp)
