--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(go_enrich_dot)
 export(go_enrich_net)
 export(go_enrich_stat)
 export(go_enrich_tree)
+export(heatmap_group)
 export(kegg_enrich)
 export(kegg_enrich_bar)
 export(kegg_enrich_dot)
@@ -33,6 +34,7 @@ export(wgcna_pipeline)
 import(ComplexHeatmap)
 import(EnhancedVolcano)
 import(GGally)
+import(RColorBrewer)
 import(Rtsne)
 import(WGCNA)
 import(circlize)
@@ -50,6 +52,7 @@ import(grDevices)
 import(graphics)
 import(grid)
 import(igraph)
+import(pheatmap)
 import(randomcoloR)
 import(reshape2)
 import(stats)
