--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -82,6 +82,7 @@ reference:
   desc: Analysis and visualization based on gene expression data and differentially expressed genes.
   contents:
   - venn_plot
+  - flower_plot
   - circos_heatmap
   - volcano_plot
   - ma_plot
