--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(chord_plot)
 export(circos_heatmap)
 export(corr_heatmap)
 export(dendro_plot)
+export(flower_plot)
+export(gene_cluster_trend)
 export(gene_rank_plot)
 export(go_enrich)
 export(go_enrich_bar)
@@ -12,6 +14,7 @@ export(go_enrich_dot)
 export(go_enrich_net)
 export(go_enrich_stat)
 export(go_enrich_tree)
+export(heatmap_cluster)
 export(heatmap_group)
 export(kegg_enrich)
 export(kegg_enrich_bar)
@@ -33,6 +36,8 @@ export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
 export(wgcna_pipeline)
+import(Mfuzz)
+import(RColorBrewer)
 import(WGCNA)
 import(enrichplot)
 import(ggnewscale)
@@ -40,6 +45,8 @@ import(ggplot2)
 import(ggpolypath)
 import(ggsci)
 import(igraph)
+import(pheatmap)
+import(plotrix)
 import(stringr)
 importFrom(ComplexHeatmap,Legend)
 importFrom(EnhancedVolcano,EnhancedVolcano)
@@ -57,11 +64,13 @@ importFrom(circlize,colorRamp2)
 importFrom(circlize,convert_height)
 importFrom(circlize,get.cell.meta.data)
 importFrom(clusterProfiler,enricher)
+importFrom(cowplot,plot_grid)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(factoextra,fviz_dend)
 importFrom(ggcorrplot,ggcorrplot)
 importFrom(ggforce,geom_mark_ellipse)
+importFrom(ggplotify,as.ggplot)
 importFrom(ggpubr,ggboxplot)
 importFrom(ggpubr,ggmaplot)
 importFrom(ggpubr,ggqqplot)
@@ -97,6 +106,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,prcomp)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
+importFrom(stats,sd)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
