New version 1.2.3 on CRAN

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
 export(wgcna_pipeline)
+import(Biobase)
 import(RColorBrewer)
 import(WGCNA)
 import(e1071)
@@ -110,6 +111,7 @@ importFrom(stats,model.matrix)
 importFrom(stats,prcomp)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
+importFrom(stats,sd)
 importFrom(survival,Surv)
 importFrom(survival,survfit)
 importFrom(survminer,ggsurvplot)
