Update corr_heatmap, pca_plot, dendro_plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
 importFrom(grDevices,pdf)
 importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
 importFrom(graphics,abline)
 importFrom(graphics,barplot)
 importFrom(graphics,legend)
