New functions umap_plot, upsetr_plot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Imports:
     ggforce,
     vegan,
     venn,
+    UpSetR,
     circlize,
     randomcoloR,
     ComplexHeatmap,
@@ -42,6 +43,7 @@ Imports:
     survival,
     survminer,
     Rtsne,
+    umap,
     dplyr,
     tidyr,
     clusterProfiler,
