--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ export(table_merge)
 export(table_split)
 export(trend_plot)
 export(tsne_plot)
+export(umap_plot)
+export(upsetr_plot)
 export(venn_plot)
 export(violin_plot)
 export(volcano_plot)
@@ -58,6 +60,8 @@ importFrom(Mfuzz,mfuzz.plot)
 importFrom(Mfuzz,standardise)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(Rtsne,Rtsne)
+importFrom(UpSetR,fromList)
+importFrom(UpSetR,upset)
 importFrom(circlize,chordDiagram)
 importFrom(circlize,circos.axis)
 importFrom(circlize,circos.clear)
@@ -119,6 +123,7 @@ importFrom(survminer,ggsurvplot)
 importFrom(tidyr,drop_na)
 importFrom(tidyr,separate)
 importFrom(tidyr,separate_rows)
+importFrom(umap,umap)
 importFrom(utils,combn)
 importFrom(utils,head)
 importFrom(utils,tail)
